# HaskellTutorialForMaths

./: .gitignore  Blog.cabal  HaskellTutorialForMaths.cabaaal  HaskellTutorialForMaths.cabal  LICENSE  ParserH.hs  README.md  about.rst  contact.markdown  flake.nix  package.yaml  site.hs  stack.yaml  treefmt.nix
AdventOfCode/: main.hs
AdventOfCode/Blogs/: AOC2024_1.lhs  AOC2024_2.lhs
css/: default.css  syntax.css
docs/: about.html  archive.html  contact.html  index.html
docs/AdventOfCode/Blogs/: AOC2024_1.html  AOC2024_2.html
docs/css/: default.css  syntax.css
docs/posts/: All math studies begin with....html  Learn Haskell by using Python, immutable python.html  Recursive types and being lazy.html  SetupOfAHaskellProject.html
hidden_posts/: All math studies begin with....lhs  Learn Haskell by using Python, immutable python.md
posts/: All math studies begin with....lhs  Recursive types and being lazy.lhs  SetupOfAHaskellProject.md
templates/: default.html  post.html
